@@ -39,13 +39,12 @@ class JackClient;
 struct JackServerGlobals
 {
     static long fClientCount;
-    static JackServerGlobals* fGlobals;
     static JackServer* fServer;
 
     JackServerGlobals();
     virtual ~JackServerGlobals();
 
-    static void Init();
+    static bool Init();
     static void Destroy();
     static int JackStart(jack_driver_desc_t* driver_desc, JSList* driver_params, int sync, int temporary, int time_out_ms, int rt, int priority, int loopback, int verbose);
     static int JackStop();
